Got the prices variables implemented as well

--- a/main/templates/main/admin5959.html
+++ b/main/templates/main/admin5959.html
@@ -8,7 +8,8 @@
 
 
   <h2 class="margin">Modifying names and prices of current order options</h2>
-
+    <p>If you want to display the FULL price, to the decimal place, put "3.00" not just "3"
+      next to the respective price text boxes below</p>
   <form method="post" action="{% url 'admin5959' %}">
     {% csrf_token %}
     <div class="formstyle" id="adminform">
