--- a/main/templates/main/order.html
+++ b/main/templates/main/order.html
@@ -35,27 +35,27 @@
         {% if nameA %}
           <label for="namea" class="labelq">{{ nameA }}: </label>
             <input type="number" name="{{ namea }}" value="0" min="0" class="quantity">
-            <p class="lblprice"> x $5.00</p><br>
+            <p class="lblprice"> x ${{ priceA }}</p><br>
         {% endif %}
         {% if nameB %}
           <label for="nameb" class="labelq">{{ nameB }}: </label>
             <input type="number" name="nameb" value="0" min="0" class="quantity">
-            <p class="lblprice"> x $3.50</p><br>
+            <p class="lblprice"> x ${{ priceB }}</p><br>
         {% endif %}
         {% if nameC %}
           <label for="namec" class="labelq">{{ nameC }}: </label>
             <input type="number" name="namec" value="0" min="0" class="quantity">
-            <p class="lblprice"> x $4.50</p><br>
+            <p class="lblprice"> x ${{ priceC }}</p><br>
         {% endif %}
         {% if nameD %}
           <label for="named" class="labelq">{{ nameD }}: </label>
             <input type="number" name="named" value="0" min="0" class="quantity">
-            <p class="lblprice"> x $4.50</p><br>
+            <p class="lblprice"> x ${{ priceD }}</p><br>
         {% endif %}
         {% if nameE %}
           <label for="namee" class="labelq">{{ nameE }}: </label>
             <input type="number" name="namee" value="0" min="0" class="quantity">
-            <p class="lblprice"> x $4.50</p><br><br>
+            <p class="lblprice"> x ${{ priceE }}</p><br><br>
         {% endif %}
 
 
@@ -66,12 +66,12 @@
         {% if nameF %}
           <label for="namef" class="labelq">{{ nameF }}: </label>
             <input type="number" name="personal" value="0" min="0" class="quantity">
-            <p class="lblprice">x $12.00</p><br>
+            <p class="lblprice">x ${{ priceF }}</p><br>
         {% endif %}
         {% if nameG %}
           <label for="nameg" class="labelq">{{ nameG }}: </label>
             <input type="number" name="family" value="0" min="0" class="quantity">
-            <p class="lblprice">x $40.00</p><br><br>
+            <p class="lblprice">x ${{ priceG }}</p><br><br>
         {% endif %}
 
 
@@ -82,34 +82,37 @@
         {% if nameH %}
           <label for="nameh" class="labelq">{{ nameH }}: </label>
             <input type="number" name="personal" value="0" min="0" class="quantity">
-            <p class="lblprice">x $12.00</p><br>
+            <p class="lblprice">x ${{ priceH }}</p><br>
         {% endif %}
         {% if nameI %}
           <label for="namei" class="labelq">{{ nameI }}: </label>
             <input type="number" name="family" value="0" min="0" class="quantity">
-            <p class="lblprice">x $40.00</p><br>
+            <p class="lblprice">x ${{ priceI }}</p><br>
         {% endif %}
         {% if nameJ %}
           <label for="namej" class="labelq">{{ nameJ }}: </label>
             <input type="number" name="personal" value="0" min="0" class="quantity">
-            <p class="lblprice">x $12.00</p><br>
+            <p class="lblprice">x ${{ priceJ }}</p><br>
         {% endif %}
         {% if nameK %}
           <label for="namek" class="labelq">{{ nameK }}: </label>
             <input type="number" name="family" value="0" min="0" class="quantity">
-            <p class="lblprice">x $40.00</p><br><br>
+            <p class="lblprice">x ${{ priceK }}</p><br><br>
         {% endif %}
 
 
         {% if caterName %}
           <h3>Custom Catering (Please <a href="#foot">Contact us</a> first!)</h3>
         {% endif %}
-        
+
         {% if caterName %}
           <label for="catername" class="labelq">{{ caterName }}: </label>
             <input type="number" name="catername" value="0" min="0" class="quantity">
-            <p class="lblprice">x $40.00</p><br><br>
+            <p class="lblprice">x ${{ caterPrice }}</p><br><br>
         {% endif %}
+        
+        <!-- Javascript to update the total everytime the 
+        value is changed in quantity -->
 
         <p style="font-weight:bold;font-size:18px;">Total: $ 0.00 </p>
         <br><br>
