--- a/main/templates/main/order.html
+++ b/main/templates/main/order.html
@@ -23,7 +23,7 @@
       <p class="footfonttxt" style="color: rgb(139, 139, 30)"><strong>FREE delivery on all orders over 40$!</strong></p>
 
       <h2>Order Form: </h2>
-      <form method="post" action="{% url 'send_email' %}">
+      <form method="post">
         {% csrf_token %}
 
 
@@ -34,7 +34,7 @@
 
         {% if nameA %}
           <label for="namea" class="labelq">{{ nameA }}: </label>
-            <input type="number" name="{{ namea }}" value="0" min="0" class="quantity">
+            <input type="number" name="namea" value="0" min="0" class="quantity">
             <p class="lblprice"> x ${{ priceA }}</p><br>
         {% endif %}
         {% if nameB %}
@@ -55,9 +55,10 @@
         {% if nameE %}
           <label for="namee" class="labelq">{{ nameE }}: </label>
             <input type="number" name="namee" value="0" min="0" class="quantity">
-            <p class="lblprice"> x ${{ priceE }}</p><br><br>
+            <p class="lblprice"> x ${{ priceE }}</p><br>
         {% endif %}
 
+        <br><br>
 
         {% if nameF or nameG %}
           <h3>Combo Meals</h3>
@@ -71,9 +72,10 @@
         {% if nameG %}
           <label for="nameg" class="labelq">{{ nameG }}: </label>
             <input type="number" name="family" value="0" min="0" class="quantity">
-            <p class="lblprice">x ${{ priceG }}</p><br><br>
+            <p class="lblprice">x ${{ priceG }}</p><br>
         {% endif %}
 
+        <br><br>
 
         {% if nameH or nameI or nameJ or nameK %}
           <h3>Add-ons</h3>
@@ -97,9 +99,10 @@
         {% if nameK %}
           <label for="namek" class="labelq">{{ nameK }}: </label>
             <input type="number" name="family" value="0" min="0" class="quantity">
-            <p class="lblprice">x ${{ priceK }}</p><br><br>
+            <p class="lblprice">x ${{ priceK }}</p><br>
         {% endif %}
 
+        <br><br>
 
         {% if caterName %}
           <h3>Custom Catering (Please <a href="#foot">Contact us</a> first!)</h3>
