--- a/main/templates/main/orderTOFIX.html
+++ b/main/templates/main/orderTOFIX.html
@@ -81,6 +81,8 @@
           <h3>Add-ons</h3>
         {% endif %}
 
+        <!-- Update the names where it says personal and family below -->
+
         {% if nameH %}
           <label for="nameh" class="labelq">{{ nameH }}: </label>
             <input type="number" name="personal" value="0" min="0" class="quantity">
