Eliminated the duplicate picture on the order page, RWD applicable

--- a/main/templates/main/order.html
+++ b/main/templates/main/order.html
@@ -4,9 +4,8 @@
 
 {% block body %}
   <div id="twopics">
-    <img id="orderleftpic" class="orderpics" src="{% static 'main/samplepic.jpg' %}">
+    <img id="orderleftpic" class="orderpics" src="{% static 'main/samplepicleft.jpg' %}">
     <img id="orderrightpic" class="orderpics" src="{% static 'main/samplepic.jpg' %}">
-    <!-- LOAD A DIFFERENT HORIZONTAL PICTURE FOR MOBILE -->
   </div>
 
   <div class="content">
