Updated about page to add more information

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -21,6 +21,9 @@
         business so that we could provide more orders to those who wish to enjoy the wonderful
         cuisine of South Asia!
       </p>
+      <p class="indexfont">We strive for the most authentic and true-to-culture product we can! However, if 
+        anything is not to your liking, we welcome any feedback or suggestion!
+      </p>
     
     </div>
     <!-- End of stuff  -->
