Fixed formatting on about page

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -24,6 +24,9 @@
       <p class="indexfont">We strive for the most authentic and true-to-culture product we can! However, if 
         anything is not to your liking, we welcome any feedback or suggestion!
       </p>
+      <p class="indexfont">Please don't hesitate to reach out with any questions! We usually respond right away
+        and we are very easy to talk to!
+      </p>
     
     </div>
     <!-- End of stuff  -->
