--- a/main/templates/main/admin5959.html
+++ b/main/templates/main/admin5959.html
@@ -60,6 +60,7 @@
       <label for="priceg" class="lblprice">Price: </label>
         <input type="number" class="adminprice" min="0" value="{{ priceG }}" name="priceg"><br><br>
 
+        <!-- Can be fixed for different options -->
       <p><strong>Add-ons</strong></p>
 
       <label for="nameh" class="lblletter"><strong>H. </strong></label>
