Added a 'support your local business' addition to homepage

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -25,6 +25,8 @@
         <p class="indexfont introbig">Here are just a few of our signature dishes...</p>
         <img id="foodbarsplash" class="introbig" style="width: 100%;" src="{% static 'main/samplefoodbar.png' %}" alt="Some signature dishes displayed">
       </div>
+
+      <p class="indexfont">During this critical time in our lives, please try to support your local businesses!</p>
     </div>
     <!-- End of stuff  -->
 {% endblock %}
